Fixed overflow issue

--- a/assets/css/customizer.css
+++ b/assets/css/customizer.css
@@ -68,6 +68,10 @@
 	padding-left: 5px;
 }
 
+.modal-inline > h3 {
+	min-width: 147px;
+}
+
 .modal-footer > input {
 	float: left;
 }
